--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,4 +24,17 @@ ul{
     padding: 0 15px;
     max-width: 1240px;
 }
+
+.btn {
+    width: 120px;
+    height: 50px;
+    margin-left: 40px;
+    background-color: $second-color;
+    font-weight: 600;
+    font-size: 16px;
+    color: #fdf5ff;
+    border: none;
+    border-radius: 8px;
+}
 @import "blocks/header";
+@import "blocks/about";
