--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,13 +13,13 @@ img {
     max-width: 100%;
 }
 
-ul{
+ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
-.container{
+.container {
     margin: 0 auto;
     padding: 0 15px;
     max-width: 1240px;
@@ -36,5 +36,99 @@ ul{
     border: none;
     border-radius: 8px;
 }
+
+.apps {
+    display: grid;
+    grid-template-columns: repeat(3, 395px);
+    grid-template-rows: 295px;
+    row-gap: 32px;
+    margin-top: 90px;
+
+    .app__item {
+        display: flex;
+        flex-direction: column;
+        padding: 35px;
+
+        &:hover {
+            backdrop-filter: blur(50px);
+            background: rgba(30, 37, 43, .5);
+            border: rgb(34, 39, 44) solid 3px;
+            border-radius: 15px;
+            .app__descr{
+                margin: 20px 0;
+            }
+            .app__footer{
+                padding-right: 0;
+            }
+            .app__visit {
+                border-radius: 8px;
+                width: 110px;
+                height: 40px;
+                background-color: $second-color;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color:#fff;
+                
+            }
+        }
+    }
+
+    .app__head {
+        display: flex;
+    }
+
+    .app__name {
+        margin-left: 30px;
+    }
+
+    .app__title {
+        font-weight: 500;
+        font-size: 24px;
+        color: rgba(255, 255, 255, 0.78);
+    }
+
+    .app__subtitle {
+        font-weight: 400;
+        font-size: 18px;
+        color: rgba(255, 165, 55, 0.55);
+    }
+
+    .app__descr {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 187%;
+        color: $main-text;
+        margin: 30px 0;
+        overflow: auto;
+    }
+
+    .app__footer {
+        padding-right: 35px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
+    .like,
+    .toFolder {
+        background-color: transparent;
+        border: none;
+    }
+
+    .toFolder {
+        margin-left: 12px;
+    }
+
+    .app__visit {
+        font-weight: 600;
+        font-size: 16px;
+        text-decoration: none;
+        color: $main-text;
+    }
+}
+
 @import "blocks/header";
 @import "blocks/about";
+@import "blocks/tools";
