--- a/src/sass/blocks/_brands.scss
+++ b/src/sass/blocks/_brands.scss
@@ -2,7 +2,7 @@
     margin: 200px 0;
 
     &__container {
-        height: 255px;
+        min-height: 255px;
         background: rgba(30, 37, 43, .5);
         border-radius: 25px;
         
@@ -18,7 +18,11 @@
 
     &__items {
         display: flex;
+        flex-wrap: wrap;
         gap: 105px;
         margin-top: 55px;
+    }
+    &__item{
+        height: 42px;
     }
 }
