add team section

--- a/src/sass/blocks/_newcomer.scss
+++ b/src/sass/blocks/_newcomer.scss
@@ -1,4 +1,5 @@
 .newcomer {
+    min-height: 530px;
     &__container {
         display: flex;
         justify-content: space-between;
@@ -29,8 +30,9 @@
     }
     &__apps{
         margin: 0;
-        grid-template-rows: 290px;
+        grid-template-rows: 260px;
         grid-template-columns: repeat(2, 285px);
+        gap: 25px;
         .app__descr{
             font-size: 14px;
         }
