--- a/src/sass/blocks/_tools.scss
+++ b/src/sass/blocks/_tools.scss
@@ -29,5 +29,11 @@
         color: $second-color;
         font-weight: 500;
         font-size: 20px;
+        transition: transform .3s ease-in-out;
+        &:hover{
+            transform: scale(1.1);
+            background-color: $second-color;
+            color: $second-text;
+        }
     }
 }
