--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,53 +1,60 @@
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+    .signup {
+        margin-left: 0;
+    }
+
+    .nav {
+        &__item {
+            padding-left: 25px;
+        }
+    }
+
+    .apps {
+        margin-top: auto;
+        grid-template-columns: repeat(auto-fill, 306px);
+        justify-content: center;
+
+        .app__item {
+            padding: 25px;
+            justify-content: space-between;
+        }
+    }
+
+    .newcomer {
+        padding: 0 15px;
+    }
+
+    .footer {
+        flex-wrap: wrap;
+        padding: 15px;
+
+        &__info {
+            margin-bottom: 30px;
+            margin-right: 0;
+        }
+
+        &__nav {
+            width: calc(100% - 260px);
+            margin-left: 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 220px);
+            row-gap: 30px;
+            justify-content: start;
+        }
+    }
+}
 
 @media (max-width: 992px) {}
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
 
-@media (max-width: 576px) {
     .nav,
     .regbtns {
         display: none;
     }
 
     .burger {
-        height: 28px;
         display: flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-
-        &__line {
-            transition: transform .3s ease-in-out;
-            width: 24px;
-            height: 3px;
-            background-color: $second-text;
-
-        }
-
-        &_active {
-            .burger__line {
-                align-items: center;
-
-                &:nth-child(2) {
-                    display: none;
-                }
-
-                &:nth-child(1) {
-                    transform: rotate(45deg);
-                }
-
-                &:nth-child(3) {
-                    margin-top: -2px;
-                    transform: rotate(-45deg);
-                }
-            }
-
-
-        }
-    }
-
-    .burger_active {
-        justify-content: center;
     }
 
     .about {
@@ -65,10 +72,7 @@
                 font-size: 12px;
             }
 
-            &__btn {
-                width: auto;
-                max-width: 130px;
-            }
+
         }
 
         &__search {
@@ -90,19 +94,10 @@
         }
 
         &__subtitle {
-            padding: 0 15px;
+            padding: 0 20px;
         }
     }
 
-    .apps {
-        margin-top: auto;
-        grid-template-columns: repeat(auto-fill, 306px);
-        justify-content: center;
-
-        &__item {
-            padding: 25px;
-        }
-    }
 
     .brands {
         margin: 90px 0;
@@ -119,7 +114,8 @@
     .newcomer {
         &__container {
             justify-content: center;
-            flex-wrap: wrap;
+            align-items: unset;
+            flex-direction: column;
         }
 
         &__title {
@@ -133,6 +129,7 @@
 
         &__apps {
             margin-top: 50px;
+            grid-template-columns: repeat(auto-fill, 285px);
         }
     }
 
@@ -161,11 +158,32 @@
         }
     }
 
+
+
+
+}
+
+@media (max-width: 576px) {
+    .about {
+        .search-form {
+            &__btn {
+                width: auto;
+                max-width: 130px;
+            }
+        }
+    }
+
+
     .contribution {
         padding: 0 15px;
 
+        &__title {
+            font-size: 35px;
+        }
+
         .subscribe {
-            width: auto;
+            width: 100%;
+            padding: 6px 8px;
 
             &__btn {
                 width: 80px;
@@ -174,15 +192,8 @@
         }
     }
 
-    .footer{
-        flex-wrap: wrap;
-        padding: 15px;
-        &__nav{
-            margin-left: 0;
-            margin-top: 50px;
-            display: grid;
-            grid-template-columns: repeat(2, 150px);
-            row-gap: 30px;
-        }
+
+    .footer {
+       flex-direction: column;
     }
 }
