--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,7 +9,7 @@ body {
     background-color: $main-color;
 }
 
-a{  
+a {
     text-decoration: none;
     color: inherit;
 }
@@ -41,14 +41,15 @@ ul {
     border: none;
     border-radius: 8px;
     transition: all .3s;
-    &:hover{
+
+    &:hover {
         transform: scale(1.05);
     }
 }
 
 .apps {
     display: grid;
-    grid-template-columns: repeat(3, 395px);
+    grid-template-columns: repeat(auto-fill, 395px);
     grid-template-rows: 295px;
     row-gap: 32px;
     margin-top: 90px;
@@ -58,17 +59,21 @@ ul {
         flex-direction: column;
         padding: 35px;
         transition: all .3s;
+
         &:hover {
             background: rgba(40, 48, 54, .6);
             border: rgb(34, 39, 44) solid 3px;
             border-radius: 15px;
             padding: 25px;
-            .app__descr{
+
+            .app__descr {
                 margin: 20px 0;
             }
-            .app__footer{
+
+            .app__footer {
                 padding-right: 0;
             }
+
             .app__visit {
                 border-radius: 8px;
                 width: 110px;
@@ -77,8 +82,8 @@ ul {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                color:#fff;
-                
+                color: #fff;
+
             }
         }
     }
@@ -137,6 +142,47 @@ ul {
         color: $main-text;
     }
 }
+
+.burger {
+    height: 28px;
+    display: none;
+    justify-content: space-evenly;
+    flex-direction: column;
+
+    &__line {
+        transition: transform .3s ease-in-out;
+        width: 24px;
+        height: 3px;
+        background-color: $second-text;
+
+    }
+
+    &_active {
+        .burger__line {
+            align-items: center;
+
+            &:nth-child(2) {
+                display: none;
+            }
+
+            &:nth-child(1) {
+                transform: rotate(45deg);
+            }
+
+            &:nth-child(3) {
+                margin-top: -2px;
+                transform: rotate(-45deg);
+            }
+        }
+
+
+    }
+}
+
+.burger_active {
+    justify-content: center;
+}
+
 
 @import "blocks/header";
 @import "blocks/about";
