--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -164,6 +164,38 @@
 }
 
 @media (max-width: 576px) {
+
+    .nav {
+        &_active {
+            position: fixed;
+            background-color: rgba(49, 54, 63, .8);
+            width: 50%;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            top: 0;
+            z-index: 10;
+            left: 0;
+
+            .nav__list {
+                height: 100%;
+                position: absolute;
+                left: 0;
+                flex-direction: column;
+            }
+        }
+    }
+    .overlay_active {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        display: block;
+        height: 100vh;
+        width: 50%;
+    }
+
     .about {
         .search-form {
             &__btn {
@@ -194,6 +226,6 @@
 
 
     .footer {
-       flex-direction: column;
+        flex-direction: column;
     }
 }
