closing navigation menu by clicking on the links

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -83,7 +83,7 @@
         }
     }
     .overlay_active {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         z-index: 10;
